# pinns-experiments

./: LICENSE  README.md  conda.yml  dev_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
examples/: EXPERIMENTS.txt  TDSE_one_level_AC.py  TISE_hydrogen_without_decomposition.py  fick_diffusion_1d.py  gray_scott_2d.py  homogenization_1d.py  interdiffusion_1d.py  navier_stokes.py  nonlinear_TDSE_1d.py
examples/experiment_configs/TISE_hydrogen_without_decomposition/: example_resnet.yaml
examples/results_fick_diffusion_1d/: X.txt  c_pred.txt
examples/results_nonlinear_TDSE_1d/: X.txt  y_pred.txt
notebooks/: README.md  SE_exact_solutions_testing.ipynb  plotting.ipynb
schrodinger_equation/: TDSE_laser_field.py  TDSE_one_level_AC.py  TDSE_unperturbed.py  TISE_hydrogen.py  TISE_hydrogen_without_decomposition.py  TISE_stark_effect.py  equation_tests.py
schrodinger_equation/experiment_configs/TISE_hydrogen_without_decomposition/: config_210.yaml  example_fnn.yaml  example_hnn.yaml
schrodinger_equation/results_TISE_hydrogen/: R_nl_pred.txt  X.txt
src/pinnse/: __init__.py  basis_functions.py  custom_boundary_conditions.py  custom_loss.py  custom_model.py  custom_pde.py  evaluation.py  integrate.py  schrodinger_eq_exact_values.py  utils.py  variational_pde.py
src/pinnse/custom_networks/: hnn.py
