[metadata]
name = pinnse
version = attr: pinnse.__version__
description = PINNs experiments.
long_description = file: README.md
keywords = PINNs experiments
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires =
    loguru
    click
    deepxde
setup_requires =
    setuptools
package_dir=
    =src
packages=find_namespace:

[options.packages.find]
where=src

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = .git,__pycache__,.mypy_cache,.pytest_cache,.venv, venv

[mypy]
check_untyped_defs = True

# to avoid mypy from crashing (https://github.com/python/mypy/issues/11045)
[mypy-transformers.trainer]
check_untyped_defs = False

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-deepxde.*]
ignore_missing_imports = True
